--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,17 @@
 site_name: IGOOR - Documentation officielle en français
+
+docs_dir: docs
+
 theme:
   name: material
   language: fr
+
 markdown_extensions:
   - attr_list
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
+
 plugins:
+  - search
   - roamlinks
