--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ mkdocs-get-deps==0.2.0
 mkdocs-material==9.7.0
 mkdocs-material-extensions==1.3.1
 mkdocs-roamlinks-plugin==0.3.2
+mkdocs-static-i18n==1.3.0
 packaging==25.0
 paginate==0.5.7
 pathspec==0.12.1
