--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,14 @@
-site_name: IGOOR - Documentation officielle en français
+# MkDocs configuration for separate builds
+# This file is no longer used for building.
+# Each language has its own config in config/en/ and config/fr/
+
+site_name: IGOOR - Official Documentation
 site_url: https://igoor-noprofit.github.io/docs/
 
 docs_dir: docs
 
 theme:
   name: material
-  language: fr
 
 markdown_extensions:
   - attr_list
