--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,21 @@ jobs:
       - name: Create .nojekyll file
         run: touch ./site/.nojekyll
 
+      - name: Create root redirect index.html
+        run: |
+          cat > ./site/index.html << 'EOF'
+          <!DOCTYPE html>
+          <html>
+          <head>
+              <meta http-equiv="refresh" content="0; url=/docs/en/" />
+              <script>window.location.href = "/docs/en/";</script>
+          </head>
+          <body>
+              <p>Redirecting to <a href="/docs/en/">English documentation</a>...</p>
+          </body>
+          </html>
+          EOF
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
