--- a/config/en/mkdocs.yml
+++ b/config/en/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: IGOOR - Official Documentation
+site_url: https://igoor-noprofit.github.io/docs/en/
 docs_dir: ../../docs/en
 site_dir: ../../site/en
 
