--- a/config/fr/mkdocs.yml
+++ b/config/fr/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: IGOOR - Documentation Officielle
+site_url: https://igoor-noprofit.github.io/docs/fr/
 docs_dir: ../../docs/fr
 site_dir: ../../site/fr
 
