--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,7 @@ jobs:
           <html>
           <head>
               <meta http-equiv="refresh" content="0; url=/docs/en/" />
-              <script>window.location.href = "/docs/en/";</script>
+              <script>window.location.href = "./en/";</script>
           </head>
           <body>
               <p>Redirecting to <a href="/docs/en/">English documentation</a>...</p>
