--- a/config/en/mkdocs.yml
+++ b/config/en/mkdocs.yml
@@ -2,6 +2,7 @@ site_name: IGOOR - Official Documentation
 site_url: https://igoor-noprofit.github.io/docs/en/
 docs_dir: ../../docs/en
 site_dir: ../../site/en
+use_directory_urls: true
 
 theme:
   name: material
