--- a/config/fr/mkdocs.yml
+++ b/config/fr/mkdocs.yml
@@ -8,7 +8,7 @@ theme:
   name: material
   custom_dir: ../../overrides/
   language: fr
-  logo: assets/images/logo.svg
+  logo: assets/images/igoor_eyes.png
   favicon: assets/images/favicon.ico
 
 markdown_extensions:
