--- a/config/en/mkdocs.yml
+++ b/config/en/mkdocs.yml
@@ -23,10 +23,10 @@ extra_css:
 extra:
   alternate:
     - name: English
-      link: /
+      link: /docs/en/
       lang: en
     - name: Français
-      link: /fr/
+      link: /docs/fr/
       lang: fr
 
 plugins:
